[tool.poetry]
name = "ketl"
version = "0.1.0"
description = "A small ETL library"
authors = ["Jerry Vinokurov"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
alembic = "^1.13.2"
SQLAlchemy = "^2.0.34"
requests = "^2.32.3"
pandas = "^2.2.2"
tqdm = "^4.66.5"
marshmallow = "^3.22.0"
fsspec = "^2024.9.0"
furl = "^2.1.3"
inflection = "^0.5.1"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}
ipython = "^8.27.0"
isort = "^5.13.2"
black = "^24.8.0"
pudb = "^2024.1.2"
pycodestyle = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=ketl --cov-report html"
env = [
    "DB_DSN = sqlite:///ketl_test.db"
]

[tool.black]
line-length = 120

[tool.pycodestyle]
max-line-length = 120